(rule
 (deps
  (glob_files Binding_error.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 1
   (with-outputs-to Binding_error.out (run ./hocc_test %{bin:hocc} Binding_error -v -w)))))
(rule
 (alias runtest)
 (action (diff Binding_error.expected Binding_error.out)))

(rule
 (deps
  (glob_files Binding_error_b.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 1
   (with-outputs-to Binding_error_b.out (run ./hocc_test %{bin:hocc} Binding_error_b -v -w)))))
(rule
 (alias runtest)
 (action (diff Binding_error_b.expected Binding_error_b.out)))

(rule
 (deps
  (glob_files Binding_error_c.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 1
   (with-outputs-to Binding_error_c.out (run ./hocc_test %{bin:hocc} Binding_error_c -v -w)))))
(rule
 (alias runtest)
 (action (diff Binding_error_c.expected Binding_error_c.out)))

(rule
 (deps
  (glob_files Conflict.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 1
   (with-outputs-to Conflict.out (run ./hocc_test %{bin:hocc} Conflict -v -w -hm)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff Conflict.expected Conflict.out))))

(rule
 (deps
  (glob_files Example.hmh*)
  %{bin:hocc})
 (targets Example.out.txt Example.hmi Example.hm)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to Example.out (run ./hocc_test %{bin:hocc} Example -v -w -txt -hm)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff Example.expected Example.out)
   (diff Example.expected.txt Example.out.txt)
   (diff Example.expected.hmi Example.hmi)
   (diff Example.expected.hm Example.hm))))

(rule
 (deps
  (glob_files Example_b.hmh*)
  %{bin:hocc})
 (targets Example_b.out.txt Example_b.hmi Example_b.hm)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to Example_b.out (run ./hocc_test %{bin:hocc} Example_b -v -w -hm)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff Example_b.expected Example_b.out)
   (diff Example_b.expected.hmi Example_b.hmi)
   (diff Example_b.expected.hm Example_b.hm))))

(rule
 (deps
  (glob_files Example_c.hmh*)
  %{bin:hocc})
 (targets Example_c.out.txt Example_c.hmi Example_c.hm)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to Example_c.out (run ./hocc_test %{bin:hocc} Example_c -v -w -hm)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff Example_c.expected Example_c.out)
   (diff Example_c.expected.hmi Example_c.hmi)
   (diff Example_c.expected.hm Example_c.hm))))

(rule
 (deps
  (glob_files Example.hmh*)
  %{bin:hocc})
 (targets Example_rno.out.txt)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to Example_rno.out (run ./hocc_test %{bin:hocc} Example -resolve no -v -w -txt)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff Example_rno.expected Example_rno.out)
   (diff Example_rno.expected.txt Example_rno.out.txt))))

(rule
 (deps
  (glob_files Example_ml.hmh*)
  %{bin:hocc})
 (targets Example_ml.out.txt Example_ml.mli Example_ml.ml)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to Example_ml.out (run ./hocc_test %{bin:hocc} Example_ml -txt -ml)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff Example_ml.expected.txt Example_ml.out.txt)
   (diff Example_ml.expected.mli Example_ml.mli)
   (diff Example_ml.expected.ml Example_ml.ml))))
(tests
 (names
  Example_ml)
 (libraries Basis))

(rule
 (deps
  (glob_files Example_introspect.hmh*)
  %{bin:hocc})
 (targets Example_introspect.out.txt Example_introspect.mli Example_introspect.ml)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to Example_introspect.out (run ./hocc_test %{bin:hocc} Example_introspect -txt -ml)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff Example_introspect.expected.txt Example_introspect.out.txt)
   (diff Example_introspect.expected.mli Example_introspect.mli)
   (diff Example_introspect.expected.ml Example_introspect.ml))))
(tests
 (names
  Example_introspect)
 (libraries Basis))

(rule
 (deps
  (glob_files Gawk.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to Gawk_aaplr.out (run ./hocc_test %{bin:hocc} Gawk -algorithm aplr -v -w)))))
(rule
 (alias runtest)
 (action (diff Gawk_aaplr.expected Gawk_aaplr.out)))

(rule
 (deps
  (glob_files Gawk.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to Gawk_aielr_myes.out (run ./hocc_test %{bin:hocc} Gawk -algorithm ielr -remerge yes -v -w)))))
(rule
 (alias runtest)
 (action (diff Gawk_aielr_myes.expected Gawk_aielr_myes.out)))

(rule
 (deps
  (glob_files Gpic.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to Gpic_aaplr.out (run ./hocc_test %{bin:hocc} Gpic -algorithm aplr -v -w)))))
(rule
 (alias runtest)
 (action (diff Gpic_aaplr.expected Gpic_aaplr.out)))

(rule
 (deps
  (glob_files Gpic.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to Gpic_aielr.out (run ./hocc_test %{bin:hocc} Gpic -algorithm ielr -v -w)))))
(rule
 (alias runtest)
 (action (diff Gpic_aielr.expected Gpic_aielr.out)))

(rule
 (deps
  (glob_files Gpic.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to Gpic_aielr_myes.out (run ./hocc_test %{bin:hocc} Gpic -algorithm ielr -remerge yes -v -w)))))
(rule
 (alias runtest)
 (action (diff Gpic_aielr_myes.expected Gpic_aielr_myes.out)))

(rule
 (deps
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to help_a.out (run %{bin:hocc} -v -verbose -w -warn -txt -text -hmh -hocc -a aplr -algorithm aplr -hm -hemlock -ml -ocaml -s Foo -src Foo -d bar -dstdir bar -h)))))
(rule
 (alias runtest)
 (action (diff help_a.expected help_a.out)))

(rule
 (deps
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 1
   (with-outputs-to help_b.out (run %{bin:hocc} -v -verbose -w -warn -txt -text -hmh -hocc -a aplr -algorithm aplr -hm -hemlock -ml -ocaml -s Foo -src Foo -d bar -dstdir bar -no-such-option)))))
(rule
 (alias runtest)
 (action (diff help_b.expected help_b.out)))

(rule
 (deps
  (glob_files Hocc.hmh*)
  %{bin:hocc})
 (targets Hocc.out.txt Hocc.out.hmh)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to Hocc.out (run ./hocc_test %{bin:hocc} Hocc -v -w -txt -hmh)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff Hocc.expected Hocc.out)
   (diff Hocc.expected.txt Hocc.out.txt)
   (diff Hocc.expected.hmh Hocc.out.hmh))))

(rule
 (deps
  (glob_files IelrFig1.hmh*)
  %{bin:hocc})
 (targets IelrFig1_rno.out.txt IelrFig1_rno.out.hmh)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to IelrFig1_rno.out (run ./hocc_test %{bin:hocc} IelrFig1 -resolve no -v -w -a ielr -txt -hmh)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff IelrFig1_rno.expected IelrFig1_rno.out)
   (diff IelrFig1_rno.expected.txt IelrFig1_rno.out.txt)
   (diff IelrFig1_rno.expected.hmh IelrFig1_rno.out.hmh))))

(rule
 (deps
  (glob_files IelrFig1.hmh*)
  %{bin:hocc})
 (targets IelrFig1.out.txt IelrFig1.out.hmh)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to IelrFig1.out (run ./hocc_test %{bin:hocc} IelrFig1 -v -w -a ielr -txt -hmh)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff IelrFig1.expected IelrFig1.out)
   (diff IelrFig1.expected.txt IelrFig1.out.txt)
   (diff IelrFig1.expected.hmh IelrFig1.out.hmh))))

(rule
 (deps
  (glob_files IelrFig2.hmh*)
  %{bin:hocc})
 (targets IelrFig2_rno.out.txt IelrFig2_rno.out.hmh)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to IelrFig2_rno.out (run ./hocc_test %{bin:hocc} IelrFig2 -resolve no -v -w -a ielr -txt -hmh)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff IelrFig2_rno.expected IelrFig2_rno.out)
   (diff IelrFig2_rno.expected.txt IelrFig2_rno.out.txt)
   (diff IelrFig2_rno.expected.hmh IelrFig2_rno.out.hmh))))

(rule
 (deps
  (glob_files IelrFig2.hmh*)
  %{bin:hocc})
 (targets IelrFig2.out.txt IelrFig2.out.hmh)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to IelrFig2.out (run ./hocc_test %{bin:hocc} IelrFig2 -v -w -a ielr -txt -hmh)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff IelrFig2.expected IelrFig2.out)
   (diff IelrFig2.expected.txt IelrFig2.out.txt)
   (diff IelrFig2.expected.hmh IelrFig2.out.hmh))))

(rule
 (deps
  (glob_files IelrFig3.hmh*)
  %{bin:hocc})
 (targets IelrFig3_apgm.out.txt IelrFig3_apgm.out.hmh)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to IelrFig3_apgm.out (run ./hocc_test %{bin:hocc} IelrFig3 -algorithm pgm -v -w -r yes -txt -hmh)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff IelrFig3_apgm.expected IelrFig3_apgm.out)
   (diff IelrFig3_apgm.expected.txt IelrFig3_apgm.out.txt)
   (diff IelrFig3_apgm.expected.hmh IelrFig3_apgm.out.hmh))))

(rule
 (deps
  (glob_files IelrFig3.hmh*)
  %{bin:hocc})
 (targets IelrFig3_rno.out.txt IelrFig3_rno.out.hmh)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to IelrFig3_rno.out (run ./hocc_test %{bin:hocc} IelrFig3 -resolve no -v -w -a ielr -txt -hmh)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff IelrFig3_rno.expected IelrFig3_rno.out)
   (diff IelrFig3_rno.expected.txt IelrFig3_rno.out.txt)
   (diff IelrFig3_rno.expected.hmh IelrFig3_rno.out.hmh))))

(rule
 (deps
  (glob_files IelrFig3.hmh*)
  %{bin:hocc})
 (targets IelrFig3.out.txt IelrFig3.out.hmh)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to IelrFig3.out (run ./hocc_test %{bin:hocc} IelrFig3 -v -w -a ielr -txt -hmh)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff IelrFig3.expected IelrFig3.out)
   (diff IelrFig3.expected.txt IelrFig3.out.txt)
   (diff IelrFig3.expected.hmh IelrFig3.out.hmh))))

(rule
 (deps
  (glob_files IelrFig4.hmh*)
  %{bin:hocc})
 (targets IelrFig4_rno.out.txt IelrFig4_rno.out.hmh)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to IelrFig4_rno.out (run ./hocc_test %{bin:hocc} IelrFig4 -resolve no -v -w -a ielr -txt -hmh)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff IelrFig4_rno.expected IelrFig4_rno.out)
   (diff IelrFig4_rno.expected.txt IelrFig4_rno.out.txt)
   (diff IelrFig4_rno.expected.hmh IelrFig4_rno.out.hmh))))

(rule
 (deps
  (glob_files IelrFig5.hmh*)
  %{bin:hocc})
 (targets IelrFig5_rno.out.txt IelrFig5_rno.out.hmh)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to IelrFig5_rno.out (run ./hocc_test %{bin:hocc} IelrFig5 -resolve no -v -w -a ielr -txt -hmh)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff IelrFig5_rno.expected IelrFig5_rno.out)
   (diff IelrFig5_rno.expected.txt IelrFig5_rno.out.txt)
   (diff IelrFig5_rno.expected.hmh IelrFig5_rno.out.hmh))))

(rule
 (deps
  (glob_files IelrFig5.hmh*)
  %{bin:hocc})
 (targets IelrFig5.out.txt IelrFig5.out.hmh)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to IelrFig5.out (run ./hocc_test %{bin:hocc} IelrFig5 -v -w -a ielr -txt -hmh)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff IelrFig5.expected IelrFig5.out)
   (diff IelrFig5.expected.txt IelrFig5.out.txt)
   (diff IelrFig5.expected.hmh IelrFig5.out.hmh))))

(rule
 (deps
  (glob_files IelrFig5Diamond.hmh*)
  %{bin:hocc})
 (targets IelrFig5Diamond.out.txt IelrFig5Diamond.out.hmh)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to IelrFig5Diamond.out (run ./hocc_test %{bin:hocc} IelrFig5Diamond -v -w -a ielr -txt -hmh)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff IelrFig5Diamond.expected IelrFig5Diamond.out)
   (diff IelrFig5Diamond.expected.txt IelrFig5Diamond.out.txt)
   (diff IelrFig5Diamond.expected.hmh IelrFig5Diamond.out.hmh))))

(rule
 (deps
  (glob_files IelrFig5Diamonds.hmh*)
  %{bin:hocc})
 (targets IelrFig5Diamonds.out.txt IelrFig5Diamonds.out.hmh)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to IelrFig5Diamonds.out (run ./hocc_test %{bin:hocc} IelrFig5Diamonds -v -w -a ielr -txt -hmh)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff IelrFig5Diamonds.expected IelrFig5Diamonds.out)
   (diff IelrFig5Diamonds.expected.txt IelrFig5Diamonds.out.txt)
   (diff IelrFig5Diamonds.expected.hmh IelrFig5Diamonds.out.hmh))))

(rule
 (deps
  (glob_files IelrFig6.hmh*)
  %{bin:hocc})
 (targets IelrFig6.out.txt IelrFig6.out.hmh)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to IelrFig6.out (run ./hocc_test %{bin:hocc} IelrFig6 -v -w -a ielr -txt -hmh)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff IelrFig6.expected IelrFig6.out)
   (diff IelrFig6.expected.txt IelrFig6.out.txt)
   (diff IelrFig6.expected.hmh IelrFig6.out.hmh))))

(rule
 (deps
  (glob_files IelrRemergeable.hmh*)
  %{bin:hocc})
 (targets IelrRemergeable_aaplr_gpre.out.txt)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to IelrRemergeable_aaplr_gpre.out (run ./hocc_test %{bin:hocc} IelrRemergeable -algorithm aplr -gc pre -v -w -txt)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff IelrRemergeable_aaplr_gpre.expected IelrRemergeable_aaplr_gpre.out)
   (diff IelrRemergeable_aaplr_gpre.expected.txt IelrRemergeable_aaplr_gpre.out.txt))))

(rule
 (deps
  (glob_files IelrRemergeable.hmh*)
  %{bin:hocc})
 (targets IelrRemergeable_aaplr_gpost.out.txt)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to IelrRemergeable_aaplr_gpost.out (run ./hocc_test %{bin:hocc} IelrRemergeable -algorithm aplr -gc post -v -w -txt)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff IelrRemergeable_aaplr_gpost.expected IelrRemergeable_aaplr_gpost.out)
   (diff IelrRemergeable_aaplr_gpost.expected.txt IelrRemergeable_aaplr_gpost.out.txt))))

(rule
 (deps
  (glob_files IelrRemergeable.hmh*)
  %{bin:hocc})
 (targets IelrRemergeable_aielr_gno.out.txt)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to IelrRemergeable_aielr_gno.out (run ./hocc_test %{bin:hocc} IelrRemergeable -algorithm ielr -gc no -v -w -txt)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff IelrRemergeable_aielr_gno.expected IelrRemergeable_aielr_gno.out)
   (diff IelrRemergeable_aielr_gno.expected.txt IelrRemergeable_aielr_gno.out.txt))))

(rule
 (deps
  (glob_files IelrRemergeable.hmh*)
  %{bin:hocc})
 (targets IelrRemergeable_aielr_myes.out.txt)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to IelrRemergeable_aielr_myes.out (run ./hocc_test %{bin:hocc} IelrRemergeable -algorithm ielr -remerge yes -v -w -txt)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff IelrRemergeable_aielr_myes.expected IelrRemergeable_aielr_myes.out)
   (diff IelrRemergeable_aielr_myes.expected.txt IelrRemergeable_aielr_myes.out.txt))))

(rule
 (deps
  (glob_files IelrRemergeable.hmh*)
  %{bin:hocc})
 (targets IelrRemergeable_alalr_rno.out.txt)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to IelrRemergeable_alalr_rno.out (run ./hocc_test %{bin:hocc} IelrRemergeable -algorithm lalr -resolve no -v -w -txt)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff IelrRemergeable_alalr_rno.expected IelrRemergeable_alalr_rno.out)
   (diff IelrRemergeable_alalr_rno.expected.txt IelrRemergeable_alalr_rno.out.txt))))

(rule
 (deps
  (glob_files Lyken.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to Lyken.out (run ./hocc_test %{bin:hocc} Lyken -v -w -a pgm -r yes)))))
(rule
 (alias runtest)
 (action (diff Lyken.expected Lyken.out)))

(rule
 (deps
  (glob_files Menhir21Longer.hmh*)
  %{bin:hocc})
 (targets Menhir21Longer.out.txt Menhir21Longer.out.hmh)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to Menhir21Longer.out (run ./hocc_test %{bin:hocc} Menhir21Longer -v -w -a pgm -txt -hmh)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff Menhir21Longer.expected Menhir21Longer.out)
   (diff Menhir21Longer.expected.txt Menhir21Longer.out.txt)
   (diff Menhir21Longer.expected.hmh Menhir21Longer.out.hmh))))

(rule
 (deps
  (glob_files Menhir21Shorter.hmh*)
  %{bin:hocc})
 (targets Menhir21Shorter.out.txt Menhir21Shorter.out.hmh)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to Menhir21Shorter.out (run ./hocc_test %{bin:hocc} Menhir21Shorter -v -w -a pgm -txt -hmh)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff Menhir21Shorter.expected Menhir21Shorter.out)
   (diff Menhir21Shorter.expected.txt Menhir21Shorter.out.txt)
   (diff Menhir21Shorter.expected.hmh Menhir21Shorter.out.hmh))))

(rule
 (deps
  (glob_files MulAddParen.hmh*)
  %{bin:hocc})
 (targets MulAddParen.out.txt MulAddParen.out.hmh)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to MulAddParen.out (run ./hocc_test %{bin:hocc} MulAddParen -v -w -a pgm -txt -hmh)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff MulAddParen.expected MulAddParen.out)
   (diff MulAddParen.expected.txt MulAddParen.out.txt)
   (diff MulAddParen.expected.hmh MulAddParen.out.hmh))))

(rule
 (deps
  (glob_files MulAddParenPrec.hmh*)
  %{bin:hocc})
 (targets MulAddParenPrec.out.txt MulAddParenPrec.out.hmh)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to MulAddParenPrec.out (run ./hocc_test %{bin:hocc} MulAddParenPrec -v -w -txt -hmh)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff MulAddParenPrec.expected MulAddParenPrec.out)
   (diff MulAddParenPrec.expected.txt MulAddParenPrec.out.txt)
   (diff MulAddParenPrec.expected.hmh MulAddParenPrec.out.hmh))))

(rule
 (deps
  (glob_files NestedEpsilon.hmh*)
  %{bin:hocc})
 (targets NestedEpsilon.out.txt)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to NestedEpsilon.out (run ./hocc_test %{bin:hocc} NestedEpsilon -v -w -txt)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff NestedEpsilon.expected NestedEpsilon.out)
   (diff NestedEpsilon.expected.txt NestedEpsilon.out.txt))))

(rule
 (deps
  (glob_files OCaml.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to OCaml.out (run ./hocc_test %{bin:hocc} OCaml -v -w -a lalr -r yes -g no)))))
(rule
 (alias runtest)
 (action (diff OCaml.expected OCaml.out)))

(rule
 (deps
  (glob_files PagerG2.hmh*)
  %{bin:hocc})
 (targets PagerG2.out.txt PagerG2.out.hmh)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to PagerG2.out (run ./hocc_test %{bin:hocc} PagerG2 -v -w -a pgm -txt -hmh)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff PagerG2.expected PagerG2.out)
   (diff PagerG2.expected.txt PagerG2.out.txt)
   (diff PagerG2.expected.hmh PagerG2.out.hmh))))

(rule
 (deps
  (glob_files PagerG2.hmh*)
  %{bin:hocc})
 (targets PagerG2_gno.out.txt PagerG2_gno.out.hmh)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to PagerG2_gno.out (run ./hocc_test %{bin:hocc} PagerG2 -gc no -v -w -a pgm -txt)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff PagerG2_gno.expected PagerG2_gno.out)
   (diff PagerG2_gno.expected.txt PagerG2_gno.out.txt))))

(rule
 (deps
  (glob_files PagerG2.hmh*)
  %{bin:hocc})
 (targets PagerG2_aielr.out.txt PagerG2_aielr.out.hmh)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to PagerG2_aielr.out (run ./hocc_test %{bin:hocc} PagerG2 -algorithm ielr -v -w -txt -hmh)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff PagerG2_aielr.expected PagerG2_aielr.out)
   (diff PagerG2_aielr.expected.txt PagerG2_aielr.out.txt)
   (diff PagerG2_aielr.expected.hmh PagerG2_aielr.out.hmh))))

(rule
 (deps
  (glob_files PagerG3.hmh*)
  %{bin:hocc})
 (targets PagerG3.out.txt PagerG3.out.hmh)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to PagerG3.out (run ./hocc_test %{bin:hocc} PagerG3 -v -w -a pgm -txt -hmh)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff PagerG3.expected PagerG3.out)
   (diff PagerG3.expected.txt PagerG3.out.txt)
   (diff PagerG3.expected.hmh PagerG3.out.hmh))))

(rule
 (deps
  (glob_files Parse_error_cident.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 1
   (with-outputs-to Parse_error_cident.out (run ./hocc_test %{bin:hocc} Parse_error_cident -v -w)))))
(rule
 (alias runtest)
 (action (diff Parse_error_cident.expected Parse_error_cident.out)))

(rule
 (deps
  (glob_files Parse_error_code.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 1
   (with-outputs-to Parse_error_code.out (run ./hocc_test %{bin:hocc} Parse_error_code -v -w)))))
(rule
 (alias runtest)
 (action (diff Parse_error_code.expected Parse_error_code.out)))

(rule
 (deps
  (glob_files Parse_error_delimited_rarray.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 1
   (with-outputs-to Parse_error_delimited_rarray.out (run ./hocc_test %{bin:hocc} Parse_error_delimited_rarray -v -w)))))
(rule
 (alias runtest)
 (action (diff Parse_error_delimited_rarray.expected Parse_error_delimited_rarray.out)))

(rule
 (deps
  (glob_files Parse_error_delimited_rbrack.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 1
   (with-outputs-to Parse_error_delimited_rbrack.out (run ./hocc_test %{bin:hocc} Parse_error_delimited_rbrack -v -w)))))
(rule
 (alias runtest)
 (action (diff Parse_error_delimited_rbrack.expected Parse_error_delimited_rbrack.out)))
(rule
 (deps
  (glob_files Parse_error_delimited_rcurly.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 1
   (with-outputs-to Parse_error_delimited_rcurly.out (run ./hocc_test %{bin:hocc} Parse_error_delimited_rcurly -v -w)))))
(rule
 (alias runtest)
 (action (diff Parse_error_delimited_rcurly.expected Parse_error_delimited_rcurly.out)))

(rule
 (deps
  (glob_files Parse_error_delimited_rcapture.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 1
   (with-outputs-to Parse_error_delimited_rcapture.out (run ./hocc_test %{bin:hocc} Parse_error_delimited_rcapture -v -w)))))
(rule
 (alias runtest)
 (action (diff Parse_error_delimited_rcapture.expected Parse_error_delimited_rcapture.out)))

(rule
 (deps
  (glob_files Parse_error_delimited_rparen.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 1
   (with-outputs-to Parse_error_delimited_rparen.out (run ./hocc_test %{bin:hocc} Parse_error_delimited_rparen -v -w)))))
(rule
 (alias runtest)
 (action (diff Parse_error_delimited_rparen.expected Parse_error_delimited_rparen.out)))

(rule
 (deps
  (glob_files Parse_error_hmhi.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 1
   (with-outputs-to Parse_error_hmhi.out (run ./hocc_test %{bin:hocc} Parse_error_hmhi -v -w)))))
(rule
 (alias runtest)
 (action (diff Parse_error_hmhi.expected Parse_error_hmhi.out)))

(rule
 (deps
  (glob_files Parse_error_hocc.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 1
   (with-outputs-to Parse_error_hocc.out (run ./hocc_test %{bin:hocc} Parse_error_hocc -v -w)))))
(rule
 (alias runtest)
 (action (diff Parse_error_hocc.expected Parse_error_hocc.out)))

(rule
 (deps
  (glob_files Parse_error_malformed.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 1
   (with-outputs-to Parse_error_malformed.out (run ./hocc_test %{bin:hocc} Parse_error_malformed -v -w)))))
(rule
 (alias runtest)
 (action (diff Parse_error_malformed.expected Parse_error_malformed.out)))

(rule
 (deps
  (glob_files Parse_error_nonterm_cce.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 1
   (with-outputs-to Parse_error_nonterm_cce.out (run ./hocc_test %{bin:hocc} Parse_error_nonterm_cce -v -w)))))
(rule
 (alias runtest)
 (action (diff Parse_error_nonterm_cce.expected Parse_error_nonterm_cce.out)))

(rule
 (deps
  (glob_files Parse_error_of_type_dot.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 1
   (with-outputs-to Parse_error_of_type_dot.out (run ./hocc_test %{bin:hocc} Parse_error_of_type_dot -v -w)))))
(rule
 (alias runtest)
 (action (diff Parse_error_of_type_dot.expected Parse_error_of_type_dot.out)))

(rule
 (deps
  (glob_files Parse_error_precs.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 1
   (with-outputs-to Parse_error_precs.out (run ./hocc_test %{bin:hocc} Parse_error_precs -v -w)))))
(rule
 (alias runtest)
 (action (diff Parse_error_precs.expected Parse_error_precs.out)))

(rule
 (deps
  (glob_files Parse_error_precs_lt.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 1
   (with-outputs-to Parse_error_precs_lt.out (run ./hocc_test %{bin:hocc} Parse_error_precs_lt -v -w)))))
(rule
 (alias runtest)
 (action (diff Parse_error_precs_lt.expected Parse_error_precs_lt.out)))

(rule
 (deps
  (glob_files Parse_error_prod_param_type.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 1
   (with-outputs-to Parse_error_prod_param_type.out (run ./hocc_test %{bin:hocc} Parse_error_prod_param_type -v -w)))))
(rule
 (alias runtest)
 (action (diff Parse_error_prod_param_type.expected Parse_error_prod_param_type.out)))

(rule
 (deps
  (glob_files Parse_error_reduction_arrow.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 1
   (with-outputs-to Parse_error_reduction_arrow.out (run ./hocc_test %{bin:hocc} Parse_error_reduction_arrow -v -w)))))
(rule
 (alias runtest)
 (action (diff Parse_error_reduction_arrow.expected Parse_error_reduction_arrow.out)))

(rule
 (deps
  (glob_files Parse_error_uident.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 1
   (with-outputs-to Parse_error_uident.out (run ./hocc_test %{bin:hocc} Parse_error_uident -v -w)))))
(rule
 (alias runtest)
 (action (diff Parse_error_uident.expected Parse_error_uident.out)))

(rule
 (deps
  (glob_files PSEUDO_END_conflict.hmh*)
  %{bin:hocc})
 (targets PSEUDO_END_conflict.out.txt PSEUDO_END_conflict.out.hmh)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to PSEUDO_END_conflict.out (run ./hocc_test %{bin:hocc} PSEUDO_END_conflict -v -w -txt -hmh)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff PSEUDO_END_conflict.expected PSEUDO_END_conflict.out)
   (diff PSEUDO_END_conflict.expected.txt PSEUDO_END_conflict.out.txt)
   (diff PSEUDO_END_conflict.expected.hmh PSEUDO_END_conflict.out.hmh))))

(rule
 (deps
  (glob_files TokenCoverage.hmh*)
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to TokenCoverage.out (run ./hocc_test %{bin:hocc} TokenCoverage -v)))))
(rule
 (alias runtest)
 (action (diff TokenCoverage.expected TokenCoverage.out)))

(rule
 (deps
  (glob_files Unused.hmh*)
  %{bin:hocc})
 (targets Unused.out.txt Unused.out.hmh)
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to Unused.out (run ./hocc_test %{bin:hocc} Unused -v -w -txt -hmh)))))
(rule
 (alias runtest)
 (action
  (progn
   (diff Unused.expected Unused.out)
   (diff Unused.expected.txt Unused.out.txt)
   (diff Unused.expected.hmh Unused.out.hmh))))

(rule
 (alias runtest)
 (deps
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to V.out (run %{bin:hocc} -V)))))

(rule
 (alias runtest)
 (deps
  %{bin:hocc})
 (action
  (with-accepted-exit-codes 0
   (with-outputs-to version.out (run %{bin:hocc} -version)))))
