(tests
 (names
  test_array
  test_cmp
  test_concat
  test_concat_map
  test_cursor
  test_cursori
  test_escaped
  test_find
  test_find_map
  test_fold
  test_foldi
  test_fold_right
  test_fold_right_until
  test_fold_until
  test_foldi_until
  test_for_
  test_get
  test_hash_fold
  test_hash_fold_empty
  test_init
  test_iter
  test_iteri
  test_length
  test_lfind_rfind
  test_list
  test_map
  test_min_elm_max_elm
  test_of_string_to_string
  test_prefix
  test_rev
  test_slice
  test_split
  test_split_lines
  test_strip
  test_substr_find
  test_substr_replace
  test_suffix
  test_xfix)
 (libraries Basis))
